# zk-mutant

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: DESIGN.md
src/: cli.rs  discover.rs  main.rs  mutant.rs  nargo.rs  options.rs  out.rs  patch.rs  project.rs  report.rs  run_report.rs  runner.rs  scan.rs  source.rs  span.rs  toolchain.rs  ui.rs
src/snapshots/: zk_mutant__discover__tests__discover_simple_noir.snap  zk_mutant__discover__tests__discover_simple_noir_mutants.snap  zk_mutant__discover__tests__find_test_code_ranges_basic.snap  zk_mutant__report__tests__format_mutant_short.snap  zk_mutant__report__tests__print_all_mutants_lines.snap  zk_mutant__report__tests__print_surviving_mutants_lines.snap  zk_mutant__report__tests__render_surviving_mutants.snap  zk_mutant__runner__tests__run_all_mutants_mutants.snap  zk_mutant__runner__tests__run_all_mutants_summary.snap  zk_mutant__scan__tests__scan_simple_noir.snap
tests/: cli_integration.rs
tests/snapshots/: cli_integration__cli_help.snap  cli_integration__list_fixture.snap  cli_integration__list_fixture_json.snap  cli_integration__preflight_baseline_fail.snap  cli_integration__preflight_baseline_fail_json.snap  cli_integration__preflight_fixture.snap  cli_integration__preflight_fixture_json.snap  cli_integration__run_baseline_fail.snap  cli_integration__run_baseline_fail_json.snap  cli_integration__run_fail_on_survivors_json.snap  cli_integration__run_limit_0.snap  cli_integration__run_limit_0_json.snap  (+3 more)
(+17 files in other folders)
