[package]
name = "zk-mutant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
noir-metrics = "0.1.0"
serde = { version = "1", features = ["derive"] }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
regex = "1"
insta = { version = "1", features = ["json"] }